hphp/test/zend/good/Zend/tests/errmsg_037.php.expectf

Fatal error: Class test contains an abstract method and must therefore be declared abstract in %s/errmsg_037.php on line 5
